--- a/src/index.css
+++ b/src/index.css
@@ -32,13 +32,16 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  gap: 20px;
+  gap: 50px;
   align-items: center;
   padding: 2rem 1.5rem 4rem;
   width: 50%;
-  color: white;
+  color: var(--clr-light-cyan);
   border-radius: 10px;
   opacity: 0.7;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 60px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .mobile {
@@ -65,10 +68,11 @@ main {
   cursor: pointer;
   margin-top: -30px;
   z-index: 10;
+  border: none;
 }
 
 .dice:hover {
-  background-color: var(--clr-light-cyan);
+  opacity: 0.8;
 }
 
 @media (max-width: 900px) {
